--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "the-odin-project-template",
+  "name": "battleship-project",
   "version": "1.0.0",
-  "description": "Template for The Odin Project repos",
+  "description": "The Odin Project: Battleship project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
