--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "babel-jest": "^29.7.0"
   }
 }
