--- a/package.json
+++ b/package.json
@@ -12,20 +12,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "babel-jest": "^29.7.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
-    "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
     "prettier": "3.2.5",
     "style-loader": "^3.3.3",
     "svg-inline-loader": "^0.8.2",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "jest": "^29.7.0",
-    "@babel/core": "^7.24.5",
-    "@babel/preset-env": "^7.24.5",
-    "babel-jest": "^29.7.0"
+    "webpack-dev-server": "^4.15.1"
   }
 }
